Penambahan API Untuk Telemetry nya
